Fix overlapping elements on homepage

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -852,6 +852,10 @@ li {
   z-index: -10;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .m-3 {
   margin: 0.75rem;
 }
@@ -1046,6 +1050,22 @@ li {
   width: max-content;
 }
 
+.w-\[120\%\] {
+  width: 120%;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
+.min-w-\[700px\] {
+  min-width: 700px;
+}
+
 .max-w-\[700px\] {
   max-width: 700px;
 }
@@ -1133,6 +1153,10 @@ li {
 
 .gap-y-3 {
   row-gap: 0.75rem;
+}
+
+.self-end {
+  align-self: flex-end;
 }
 
 .self-center {
@@ -1292,6 +1316,11 @@ li {
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
 }
@@ -1323,6 +1352,12 @@ li {
 .from-white {
   --tw-gradient-from: #fff;
   --tw-gradient-to: rgb(255 255 255 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[red\] {
+  --tw-gradient-from: red;
+  --tw-gradient-to: rgb(255 0 0 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -1444,6 +1479,10 @@ li {
 
 .pb-\[100px\] {
   padding-bottom: 100px;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1734,6 +1773,14 @@ li {
 
   .max-xl\:w-48 {
     width: 12rem;
+  }
+
+  .max-xl\:w-auto {
+    width: auto;
+  }
+
+  .max-xl\:min-w-0 {
+    min-width: 0px;
   }
 
   .max-xl\:flex-col {
